--- a/src/bda/bfg/ugm/browser/static/styles.css
+++ b/src/bda/bfg/ugm/browser/static/styles.css
@@ -149,37 +149,48 @@ div.column .batch strong {
 }
 /* column listing */
 div.columnlisting {
-	border-left:#ccc 1px solid;
-	border-bottom:#ccc 1px solid;
 	margin-top:12px;
-	overflow-y:scroll;
 }
 div.columnlisting ul {
+	border-top:#ccc 1px solid;
 	margin:0;
 	padding:0;
 	list-style-type:none;
 }
 div.columnlisting li {
 	clear:both;
-    border-bottom:#ccc 1px solid;
 }
 div.columnlisting div.left {
 	float:left;
+	width:162px;
+	overflow:hidden;
+	padding:2px;
+	border-left:#ccc 1px solid;
+	border-right:#ccc 1px solid;
+	border-bottom:#ccc 1px solid;
+}
+div.columnlisting div.middle {
+    float:left;
+    width:162px;
+    overflow:hidden;
+    padding:2px;
+    border-right:#ccc 1px solid;
+    border-bottom:#ccc 1px solid;
+}
+div.columnlisting div.right {
+	float:right;
 	width:160px;
 	overflow:hidden;
 	padding:2px;
 	border-right:#ccc 1px solid;
-}
-div.columnlisting div.right {
-	float:right;
-	overflow:hidden;
-	padding:2px;
+	border-bottom:#ccc 1px solid;
 }
 /* left column */
-div.left_column div.columnlisting {
-    height:450px;
+div.left_column {
 }
 /* right column */
+div.right_column {
+}
 div.right_column #form-addform,
 div.right_column #form-editform {
     background:none;
@@ -199,9 +210,6 @@ div.right_column input {
 }
 div.right_column div.field input {
     float:right;
-}
-div.right_column div.columnlisting {
-    height:308px;
 }
 div.right_column div.column_limit {
 	float:right;
