--- a/src/bda/bfg/ugm/browser/static/styles.css
+++ b/src/bda/bfg/ugm/browser/static/styles.css
@@ -160,6 +160,9 @@ div.columnlisting ul {
 div.columnlisting li {
 	clear:both;
 }
+div.columnlisting li.hidden {
+	display:none;
+}
 div.columnlisting li.selected div {
 	color:#fff;
 	background-color:#49539f;
