simplify listing, UI work on item actions

--- a/src/bda/bfg/ugm/browser/static/styles.css
+++ b/src/bda/bfg/ugm/browser/static/styles.css
@@ -22,6 +22,9 @@ form .field {
 form .field div.error {
 	color:red;
 }
+.clear {
+	clear:both;
+}
 /* main layout styles */
 #wrapper {
 	margin:0;
@@ -167,26 +170,20 @@ div.columnlisting li.selected div {
 	color:#fff;
 	background-color:#49539f;
 }
-div.columnlisting div.left {
+div.columnlisting div.head {
 	float:left;
-	width:162px;
+	width:447px;
+	height:18px;
 	overflow:hidden;
 	padding:2px;
 	border-left:#ccc 1px solid;
 	border-right:#ccc 1px solid;
 	border-bottom:#ccc 1px solid;
 }
-div.columnlisting div.middle {
-    float:left;
-    width:162px;
-    overflow:hidden;
-    padding:2px;
-    border-right:#ccc 1px solid;
-    border-bottom:#ccc 1px solid;
-}
-div.columnlisting div.right {
+div.columnlisting div.actions {
 	float:right;
-	width:160px;
+	width:42px;
+	height:18px;
 	overflow:hidden;
 	padding:2px;
 	border-right:#ccc 1px solid;
@@ -231,4 +228,34 @@ div.right_column div.column_limit label {
 div.right_column div.column_limit input {
     float:right;
 	font-size:80%;
+}
+/* action icons */
+a.action {
+	line-height:16px;
+	font-size:16px;
+	padding-left:16px;
+	text-decoration:none;
+	float:right;
+	margin-top:1px;
+}
+a.add_item {
+	background:url('/bda.bfg.ugm.static/icon_add.png') 50% 50% no-repeat;
+	cursor:pointer;
+}
+a.add_item_disabled {
+    background:url('/bda.bfg.ugm.static/icon_add_disabled.png') 50% 50% no-repeat;
+}
+a.remove_item {
+	background:url('/bda.bfg.ugm.static/icon_remove.png') 50% 50% no-repeat;
+	cursor:pointer;
+}
+a.remove_item_disabled {
+    background:url('/bda.bfg.ugm.static/icon_remove_disabled.png') 50% 50% no-repeat;
+}
+a.delete_item {
+	background:url('/bda.bfg.ugm.static/icon_delete.png') 50% 50% no-repeat;
+	cursor:pointer;
+}
+a.delete_item_disabled {
+    background:url('/bda.bfg.ugm.static/icon_delete_disabled.png') 50% 50% no-repeat;
 }
