--- a/src/bda/bfg/ugm/browser/static/styles.css
+++ b/src/bda/bfg/ugm/browser/static/styles.css
@@ -259,3 +259,38 @@ a.delete_item {
 a.delete_item_disabled {
     background:url('/bda.bfg.ugm.static/images/icon_delete_disabled.png') 50% 50% no-repeat;
 }
+
+/* dict widget XXX: move to yafowil.widget.dict */
+.dictwidget {
+	border-top:#ccc 1px solid;
+	border-bottom:#ccc 1px solid;
+	border-left:#ccc 1px solid;
+	border-collapse:collapse;
+}
+.dictwidget th {
+	border-right:#ccc 1px solid;
+}
+.dictwidget td {
+	border-top:#ccc 1px solid;
+	border-right:#ccc 1px solid;
+}
+.dict_actions a {
+    line-height:16px;
+    font-size:16px;
+    padding-left:16px;
+    text-decoration:none;
+    float:right;
+    margin-top:1px;
+}
+.dict_actions a.dict_row_add {
+	background:url('/bda.bfg.ugm.static/images/icon_add.png') 50% 50% no-repeat;
+}
+.dict_actions a.dict_row_remove {
+    background:url('/bda.bfg.ugm.static/images/icon_remove.png') 50% 50% no-repeat;
+}
+.dict_actions a.dict_row_up {
+    background:url('/bda.bfg.ugm.static/images/icon_up.png') 50% 50% no-repeat;
+}
+.dict_actions a.dict_row_down {
+    background:url('/bda.bfg.ugm.static/images/icon_down.png') 50% 50% no-repeat;
+}
