--- a/src/bda/bfg/ugm/browser/static/styles.css
+++ b/src/bda/bfg/ugm/browser/static/styles.css
@@ -262,17 +262,14 @@ a.delete_item_disabled {
 
 /* dict widget XXX: move to yafowil.widget.dict */
 .dictwidget {
-	border-top:#ccc 1px solid;
-	border-bottom:#ccc 1px solid;
-	border-left:#ccc 1px solid;
+	width:402px;
 	border-collapse:collapse;
 }
-.dictwidget th {
-	border-right:#ccc 1px solid;
+.dictwidget input {
+	width:150px;
 }
-.dictwidget td {
-	border-top:#ccc 1px solid;
-	border-right:#ccc 1px solid;
+.dictwidget th {
+	font-weight:normal;
 }
 .dict_actions a {
     line-height:16px;
@@ -291,6 +288,12 @@ a.delete_item_disabled {
 .dict_actions a.dict_row_up {
     background:url('/bda.bfg.ugm.static/images/icon_up.png') 50% 50% no-repeat;
 }
+.dict_actions a.dict_row_up_disabled {
+    background:url('/bda.bfg.ugm.static/images/icon_up_disabled.png') 50% 50% no-repeat !important;
+}
 .dict_actions a.dict_row_down {
     background:url('/bda.bfg.ugm.static/images/icon_down.png') 50% 50% no-repeat;
+}
+.dict_actions a.dict_row_down_disabled {
+    background:url('/bda.bfg.ugm.static/images/icon_down_disabled.png') 50% 50% no-repeat !important;
 }
