--- a/src/bda/bfg/ugm/browser/static/styles.css
+++ b/src/bda/bfg/ugm/browser/static/styles.css
@@ -153,41 +153,38 @@ div.column .batch strong {
 /* column listing */
 div.columnlisting {
 	margin-top:12px;
+	border-left:#ccc 1px solid;
+	border-bottom:#ccc 1px solid;
+	height:450px;
+	overflow-y:scroll;
 }
 div.columnlisting ul {
-	border-top:#ccc 1px solid;
 	margin:0;
 	padding:0;
 	list-style-type:none;
 }
 div.columnlisting li {
 	clear:both;
+	border-top:#ccc 1px solid;
+	height:24px;
 }
 div.columnlisting li.hidden {
 	display:none;
 }
-div.columnlisting li.selected div {
+div.columnlisting li.selected {
 	color:#fff;
-	background-color:#49539f;
+	background-color:#49539f !important;
 }
 div.columnlisting div.head {
 	float:left;
-	width:447px;
-	height:18px;
+	width:420px;
 	overflow:hidden;
 	padding:2px;
-	border-left:#ccc 1px solid;
-	border-right:#ccc 1px solid;
-	border-bottom:#ccc 1px solid;
 }
 div.columnlisting div.actions {
 	float:right;
-	width:42px;
-	height:18px;
 	overflow:hidden;
 	padding:2px;
-	border-right:#ccc 1px solid;
-	border-bottom:#ccc 1px solid;
 }
 /* left column */
 div.left_column {
