cursor:pointer on listing items

--- a/src/bda/bfg/ugm/browser/static/styles.css
+++ b/src/bda/bfg/ugm/browser/static/styles.css
@@ -183,6 +183,7 @@ div.columnlisting div.head {
 	width:420px;
 	overflow:hidden;
 	padding:2px;
+	cursor:pointer;
 }
 div.columnlisting div.actions {
 	float:right;
