cancel button width in user form

--- a/src/bda/bfg/ugm/browser/static/styles.css
+++ b/src/bda/bfg/ugm/browser/static/styles.css
@@ -299,7 +299,8 @@ td.left_col {
 #form-userform input {
 	width: 230px;
 }
-#form-userform #input-userform-save {
+#form-userform #input-userform-save,
+#form-userform #input-userform-cancel {
     width: 100px;
 }
 
