--- a/src/bda/bfg/ugm/browser/static/styles.css
+++ b/src/bda/bfg/ugm/browser/static/styles.css
@@ -164,6 +164,13 @@ div.columnsorting a {
 	text-decoration:none;
 	font-size:80%;
 	font-weight:bold;
+	padding-left:11px;
+}
+div.columnsorting a.asc {
+	background: url('/bda.bfg.ugm.static/images/icon_asc.gif') 0 50% no-repeat;
+}
+div.columnsorting a.desc {
+	background: url('/bda.bfg.ugm.static/images/icon_desc.gif') 0 50% no-repeat;
 }
 div.columnlisting {
 	border-left:#ccc 1px solid;
